-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.1
-
None
-
macOS Catalina 10.15.7
When using a CustomContextMenu in a modal dialog, e.g., a QDialog subclass, on macOS, the context menu appears fine. However, it does not respond to mouse clicks, and menu items are highlighted inconsistently. You can only get items to highlight via mouse by moving the cursor outside the menu and slowly moving it back onto the menu - the item under the mouse will highlight. At that point, moving the mouse over other items has no effect. Also, clicking the highlighted item has no effect and causes a system error sound to be emitted.
Interesting, items can be selected using the up and down arrow keys, followed by pressing the return key.
The same code that works fine with Qt 5.12 does not work with Qt 5.15.1. It also works fine on linux and Windows.