mac: Fix Context menu in paths in pattern piece tool

A mac specific issue in Qt 5.15.0 - at least 5.15.2, see
https://bugreports.qt.io/browse/QTBUG-97559

Closes: #822